🐛 FIX: Refactor card block to fix overflow of content

--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -76,7 +76,7 @@
 
 .card__price-tag {
   display: flex;
-  justify-content: space-between;
+  flex-flow: row wrap;
   align-items: center;
   margin-top: 20px;
 
@@ -84,8 +84,8 @@
 }
 
 .card__price {
-  margin: 20px 10px 21px 0;
-  padding-bottom: 5px;
+  margin: 20px auto 21px 0;
+  padding: 0 5px 5px 0;
 
   font-size: 15px;
   font-weight: bold;
@@ -142,9 +142,11 @@
   }
 
   .card__content {
+    display: flex;
+    flex-flow: column nowrap;
     width: 50%;
     margin: 0;
-    padding: 0 28px 90px 28px;
+    padding: 0 28px 0 28px;
   }
 
   .card__link-img {
@@ -167,17 +169,12 @@
   }
 
   .card__price-tag {
-    position: absolute;
-    bottom: 0;
-    left: 28px;
-    width: calc(100% - 28px * 2);
-    margin: 0;
+    margin-top: auto;
     padding: 0.1px 5px;
   }
 
   .card__price {
-    margin: 21px 10px 23px 0;
-    padding-bottom: 5px;
+    margin: 21px auto 23px 0;
 
     font-size: 17px;
     line-height: 1.41;
@@ -204,32 +201,30 @@
 
   .card__link-img {
     width: auto;
-    min-height: 462px;
   }
 
   .card__content {
+    display: block;
     width: auto;
-    min-height: 170px;
-    padding: 0 28px 78px 28px;
+    margin: 0 28px;
+    padding: 0;
   }
 
   .card__name {
-    margin: 25px 0 4px 0;
+    margin: 27px 0 6px 0;
     padding-right: 20px;
   }
 
   .card__text {
-    margin: 4px 0 10px 0;
+    margin: 6px 0 10px 0;
   }
 
   .card__price-tag {
-    padding: 0.1px;
-  }
+    margin-top: 38px;
+    padding: 0;
 
-  .card__cart {
-    display: block;
-    width: 25px;
-    height: 27px;
-    padding: 0 4px 9px 0;
+    &--narrow {
+      margin-top: 15px;
+    }
   }
 }
